--- a/flutter_learn/pubspec.yaml
+++ b/flutter_learn/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   dio: ^3.0.9 #网络库
   json_annotation: ^2.4.0
   fluttertoast: ^3.1.0
+  provider: ^5.0.0
 
 dev_dependencies:
   flutter_test:
