--- a/flutter_learn/pubspec.yaml
+++ b/flutter_learn/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   fluttertoast: ^3.1.0
   provider: ^5.0.0
   event_bus: ^2.0.0
+  device_info: ^2.0.2
 
 dev_dependencies:
   flutter_test:
