--- a/favorcate/pubspec.yaml
+++ b/favorcate/pubspec.yaml
@@ -71,6 +71,9 @@ flutter:
   #       - asset: fonts/TrajanPro.ttf
   #       - asset: fonts/TrajanPro_Bold.ttf
   #         weight: 700
-  #
+  #s
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+  assets:
+    - assets/images/tabbar/
+    - assets/json/
