--- a/favorcate/pubspec.yaml
+++ b/favorcate/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   fluttertoast: ^3.1.0
   dio: ^4.0.0
+  provider: ^5.0.0
 
 dev_dependencies:
   flutter_test:
