--- a/favorcate/pubspec.yaml
+++ b/favorcate/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   fluttertoast: ^3.1.0
   dio: ^4.0.0
   provider: ^5.0.0
+  shared_preferences: ^2.0.6
 
 dev_dependencies:
   flutter_test:
